[package]
name = "server-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.5"
clap = { version = "3.1", features = ["derive", "env"] }
http = "0.2"
rand = "0.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# redeclare every dependencies like if external
anyhow = "1.0"
assert2 = "0.3.6"
async-trait = "0.1"
http = "0.2"
mime = "0.3"
reqwest-middleware = "0.1"
reqwest = "0.11"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
task-local-extensions = "0.1.1"
tokio = { version = "1.17", features = ["full"] }
url = "2.2"

[profile.release]
codegen-units = 1
lto = true
